fixed text overflow

--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -5,15 +5,18 @@
   border-radius: 7%;
   cursor: pointer;
   margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .card {
   background-color: lightgrey;
-  width: 8rem;
-  height: 7rem;
+  width: 9rem;
+  height: auto;
   margin-top: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 7%;
+  overflow: hidden;
+  text-align: center;
 }
